crates/aranya-policy-compiler/tests/data/type_errors/struct_field_wrong_type_invalid_type.fail.policy
struct Foo {a int}
function g(x struct Foo) bool {
    return Foo{a: false}
}
